# whisper-receiver

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/transcriber/: main.py
src/transcriber/adapters/: mongo.py
src/transcriber/helpers/: process.py  transcriber.py
